fix resume layout for rtl

--- a/themes/omid-dev/layouts/_default/resume.html
+++ b/themes/omid-dev/layouts/_default/resume.html
@@ -82,10 +82,10 @@
 
     <div class="resume-section summary">
       <div class="resume-section-header">
-        <h2><i class="fa-solid fa-user"></i> {{ T "summary" }}</h2>
+        <h2><i class="fa-solid fa-id-card"></i> {{ T "summary" }}</h2>
       </div>
       <div class="resume-section-content">
-        <p>{{ $resume.summary }}</p>
+        <p class="summary-text">{{ $resume.summary }}</p>
       </div>
     </div>
 
