--- a/themes/omid-dev/assets/css/common/archive.css
+++ b/themes/omid-dev/assets/css/common/archive.css
@@ -58,4 +58,8 @@
 .archive-meta {
     color: var(--secondary);
     font-size: 14px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 4px;
 }
