--- a/themes/omid-dev/assets/css/common/main.css
+++ b/themes/omid-dev/assets/css/common/main.css
@@ -171,44 +171,49 @@ pre:hover .copy-code {
     display: block;
 }
 
+.meta-item {
+    display: inline-flex;
+    align-items: center;
+    gap: 6px;
+    white-space: nowrap;
+}
+
+/* Legacy support for ul.meta if still in cache */
 ul.meta {
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start;
-    color: var(--content);
-    font-size: 14px;
-    line-height: 1.3;
     list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
 ul.meta li {
-    line-height: 1.5;
-    align-self: flex-end;
-    flex-wrap: nowrap;
-    padding-bottom: 5px;
-    height: 32px;
-    display: flex;
+    display: inline-flex;
     align-items: center;
 }
 
-ul.meta li i {
-    padding-right: 9px;
-    font-size: 17px;
+.meta-item i {
+    font-size: 14px;
 }
 
-[dir=rtl] ul.meta li i {
+.meta-item + .meta-item::before {
+    content: "•";
+    margin: 0 8px;
+    color: var(--tertiary);
+}
+
+[dir=rtl] .meta-item i {
     padding-right: 0;
-    padding-left: 9px;
+    padding-left: 0;
 }
 
-ul.meta li::after {
-    content: "|";
-    font-weight: bold;
-    padding: 0 8px;
-}
-ul.meta li:last-child:after {
-    display:none;
-    padding:0
+.post-meta-avatar {
+    height: 24px;
+    width: 24px;
+    border-radius: 50%;
+    vertical-align: middle;
+    object-fit: cover;
+    margin-right: 4px;
 }
 
 .toast-message {
