--- a/themes/omid-dev/layouts/_default/archives.html
+++ b/themes/omid-dev/layouts/_default/archives.html
@@ -68,7 +68,7 @@
           {{- end }}
         </h3>
         <div class="archive-meta">
-          {{- partial "post_meta.html" . -}}
+          {{- partial "post_meta.html" (dict "Context" . "isCompact" true "hideShare" true) -}}
         </div>
         <a class="entry-link" aria-label="post link to {{ .Title | plainify }}" href="{{ .Permalink }}"></a>
       </div>
