--- a/themes/omid-dev/layouts/partials/edit_post.html
+++ b/themes/omid-dev/layouts/partials/edit_post.html
@@ -1,8 +1,10 @@
 {{- if and (or .Params.editPost.URL site.Params.editPost.URL) (not (.Param "editPost.disabled")) -}}
 {{- $fileUrlPath := path.Join .File.Path }}
 
-{{- if or .Params.author site.Params.author (.Param "ShowReadingTime") (not .Date.IsZero) .IsTranslated }}&nbsp;|&nbsp;{{- end -}}
+<span class="meta-item meta-edit">
 <a href="{{ .Params.editPost.URL | default site.Params.editPost.URL }}{{ if .Params.editPost.appendFilePath | default ( site.Params.editPost.appendFilePath | default false ) }}/{{ $fileUrlPath }}{{ end }}" rel="noopener noreferrer" target="_blank">
+    <i aria-hidden="true" role="img" class="fas fa-edit"></i>
     {{- .Params.editPost.Text | default (site.Params.editPost.Text | default (i18n "edit_post" | default "Edit")) -}}
 </a>
+</span>
 {{- end }}
