--- a/themes/omid-dev/layouts/posts/list.html
+++ b/themes/omid-dev/layouts/posts/list.html
@@ -99,7 +99,7 @@
   </header>
   {{- if not (.Param "hideMeta") }}
   <footer class="entry-footer">
-    {{- partial "post_meta.html" . -}}
+    {{- partial "post_meta.html" (dict "Context" . "isCompact" true "hideShare" true) -}}
   </footer>
   {{- end }}
   {{- if (ne (.Param "hideSummary") true) }}
