test new opengraph images

--- a/themes/omid-dev/layouts/partials/templates/_funcs/get-featured-image.html
+++ b/themes/omid-dev/layouts/partials/templates/_funcs/get-featured-image.html
@@ -1,39 +1,111 @@
 {{ $images := $.Resources.ByType "image" }}
 {{ $featured := $images.GetMatch "*feature*" }}
 {{ if not $featured }}{{ $featured = $images.GetMatch "{*cover*,*thumbnail*}" }}{{ end }}
+
 {{ if not $featured }}
-
-{{ $featured = resources.Get "/opengraph/default.jpg" }}
-
+    {{/* 1. Select Base Image and Category Label */}}
+    {{ $featured = resources.Get "/opengraph/default.jpg" }}
+    {{ $categoryName := "Blog" }}
+    
     {{ range .Params.categories }}
-    {{ if eq (lower .) "techblog"  }}
-        {{ $featured = resources.Get "/opengraph/techblog.jpg" }}
-    {{ else if eq (lower .) "electronics" }}
-        {{ $featured = resources.Get "/opengraph/electronics.jpg" }}
-    {{ else if eq (lower .) "health" }}
-        {{ $featured = resources.Get "/opengraph/health.jpg" }}
-    {{ end }}
+        {{ if eq (lower .) "techblog"  }}
+            {{ $featured = resources.Get "/opengraph/techblog.jpg" }}
+            {{ $categoryName = "Tech Blog" }}
+        {{ else if eq (lower .) "electronics" }}
+            {{ $featured = resources.Get "/opengraph/electronics.jpg" }}
+            {{ $categoryName = "Electronics" }}
+        {{ else if eq (lower .) "health" }}
+            {{ $featured = resources.Get "/opengraph/health.jpg" }}
+            {{ $categoryName = "Health" }}
+        {{ end }}
     {{ end }}
 
+    {{/* 2. Prepare Font and Colors */}}
+    {{ $font := resources.Get "/opengraph/Inter-VariableFont_opsz-wght.ttf" }}
+    {{ $accentColor := "#14b8a6" }} {{/* Brighter Teal for OG */}}
+    {{ $white := "#FFFFFF" }}
 
-    {{ $size := 100 }}
+    {{/* 3. Apply Background Filters */}}
+    {{/* Darken slightly to make text pop and look more premium */}}
+    {{ $featured = $featured | images.Filter (images.Brightness -25) }}
+
+    {{/* 4. Draw Category Label (Small, All-Caps, Accent Color) */}}
+    {{ $categoryOptions := dict 
+        "color" $accentColor
+        "size" 28
+        "x" 80 "y" 80
+        "font" $font
+    }}
+    {{ $featured = $featured | images.Filter (images.Text (upper $categoryName) $categoryOptions) }}
+
+    {{/* 5. Prepare Wrapped Title */}}
     {{ $title := $.LinkTitle }}
-    {{ if gt (len $title) 120 }}
-    {{ $size = 65 }}
-    {{ else if gt (len $title) 200 }}
-    {{ $size = 35 }}
+    {{ $wrappedTitle := "" }}
+    {{ $line := "" }}
+    {{ $words := split $title " " }}
+    {{ range $words }}
+        {{/* Wrap at ~22 characters for a balanced look */}}
+        {{ if gt (add (len $line) (len .)) 22 }}
+            {{ $wrappedTitle = printf "%s%s\n" $wrappedTitle $line }}
+            {{ $line = . }}
+        {{ else }}
+            {{ if eq $line "" }}
+                {{ $line = . }}
+            {{ else }}
+                {{ $line = printf "%s %s" $line . }}
+            {{ end }}
+        {{ end }}
+    {{ end }}
+    {{ $wrappedTitle = printf "%s%s" $wrappedTitle $line }}
+
+    {{/* 6. Determine Title Font Size based on length */}}
+    {{ $fontSize := 80 }}
+    {{ if gt (len $title) 40 }}
+        {{ $fontSize = 65 }}
+    {{ end }}
+    {{ if gt (len $title) 70 }}
+        {{ $fontSize = 50 }}
     {{ end }}
 
-    {{ $text := $title }}
-                {{ $textOptions := dict 
-                    "color" "#FFF"
-                    "size" $size
-                    "lineSpacing" 5
-                    "x" 90 "y" 90
-                    "font" (resources.Get "/opengraph/segoe-ui.ttf")
-                }}
+    {{/* 7. Draw Title (Large, White) */}}
+    {{ $titleOptions := dict 
+        "color" $white
+        "size" $fontSize
+        "lineSpacing" 15
+        "x" 80 "y" 140
+        "font" $font
+    }}
+    {{ $featured = $featured | images.Filter (images.Text $wrappedTitle $titleOptions) }}
 
-    {{ $featured = $featured | images.Filter (images.Text $text $textOptions) }}
+    {{/* 8. Add Avatar and Site Info (Footer Area) */}}
+    {{/* Note: For Hugo to process the avatar, it should be in the assets/ folder */}}
+    {{ $avatar := resources.Get "/images/bio-photo-150x150.jpg" }}
+    {{ if not $avatar }}
+        {{ $avatar = resources.Get "/opengraph/avatar.jpg" }}
+    {{ end }}
+
+    {{ if $avatar }}
+        {{ $avatar = $avatar.Fill "100x100" }}
+        {{ $featured = $featured | images.Filter (images.Overlay $avatar 80 480) }}
+    {{ end }}
+
+    {{/* Site Owner Name */}}
+    {{ $nameOptions := dict 
+        "color" $white
+        "size" 36
+        "x" 200 "y" 500
+        "font" $font
+    }}
+    {{ $featured = $featured | images.Filter (images.Text "Omid Farhang" $nameOptions) }}
+
+    {{/* Site Domain */}}
+    {{ $siteOptions := dict 
+        "color" $accentColor
+        "size" 24
+        "x" 200 "y" 545
+        "font" $font
+    }}
+    {{ $featured = $featured | images.Filter (images.Text "omid.dev" $siteOptions) }}
 {{ end }}
 
 {{ return $featured }}
